tests/derivation/core/norec part w_ext 001/expected
1/2: Building RunDerivedGen (RunDerivedGen.idr)
2/2: Building DerivedGen (DerivedGen.idr)
Error: While processing right hand side of checkedGen. Error during reflection: Only applications to non-polymorphic type constructors are supported at the moment

DerivedGen:17:14--17:23
 13 | XShow = %runElab derive
 14 | 
 15 | export
 16 | checkedGen : Fuel -> (Fuel -> Gen MaybeEmpty String) => Gen MaybeEmpty X
 17 | checkedGen = deriveGen
                   ^^^^^^^^^

